# maria

./: DOCLING_INTEGRATION_FINAL_STATUS.md  Dockerfile  Dockerfile.backup  Dockerfile.fixed  FIX-COMPLETATO.md  INSTALLAZIONE-COMPLETATA.md  INTEGRATION_CHECKPOINT.md  Makefile  README-DOCKER.md  RICOSTRUZIONE-COMPLETATA.md  api_ecosystem_knowledge.json  claude_desktop_config.json  claude_desktop_docker_config.json  cursor_mcp_config.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.working.yml  docker-compose.yml  test-neo4j.py  test_simple_integration.py
.cursor/rules/: apprendista copy.mdc  apprendista.mdc  compagno.mdc  compagnoClaude.mdc
docs/ontologie/: 2_ISO17025_Completa.ttl  4_unified_governance.ttl  bfo_converted.ttl  catalog-v001.xml  compliance_ontology_module.ttl  foaf.ttl  genio.ttl  genio_evolution_2025-09-21.ttl  om-2.0.ttl  prefixes.txt  qudt-quantitykind.ttl  risk_ontology_module.ttl  skos.ttl
docs/ontologie/query/: BFO_LIMS_Queries.sparql  COBIT5_SPARQL_Queries.sparql  GENIO_SPARQL_Queries.sparql  ISO17025_SPARQL_Queries.sparql  TIME_LIMS_Queries.sparql
genio/: README.md  sessione_001_graphiti_dockerization.ttl
librerie/: README.md
librerie/ontologieService/: README.md  __init__.py  pyproject.toml
librerie/ontologieService/core/: __init__.py  layer_classifier.py  ontology_importer.py  ttl_parser.py
librerie/ontologieService/frameworks/: __init__.py  cobit5_analyzer.py  iso17025_analyzer.py
mcp_server/: Dockerfile  autonomous_extension.py  cobit5_integration.py  docling_integration.py  graphiti_mcp_server.py  pyproject.toml
scripts/: health-check.sh  setup.sh
server/: pyproject.toml
server/graph_service/routers/: __init__.py
