[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "graphiti-core>=0.14.0",
    "azure-identity>=1.21.0",
    "graphiti-core",
    "watchdog>=3.0.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "rdflib>=6.3.0",
]
